--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -4,5 +4,5 @@ show_downloads: true
 # google_analytics:[Your Google Analytics tracking ID]
 
 # Name of website
-title: Audio Source Separation for Arduino
+title: Audio Source Separation on Arduino
 description: Project for UCLA ECEM202A/CSM213A (Fall 2021)
